css/main.css
@import url(https://fonts.googleapis.com/css?family=Cambo);
@import url(https://fonts.googleapis.com/css?family=Dancing+Script);

body {
    background-color: #444444;
    font-family: "Cambo", serif;
}

/*  All */

a {
    color: #cc6633;
}

a.active {
    color: #FFFFFF;
}

a:hover {
    color: #FFFFFF;
}

/* Header */

header {
    height: 200px;
    background-size: cover;
    position: relative;
    display: flex;
    text-align: center;
}

header a.logo {
    position: absolute;
    width: 300px;
    height: 250px;
    background: url(../images/logo_inverted.png) no-repeat 0 0;
    background-size: contain;
    z-index: 1;
    left: calc(50% - 150px);
    top: 30px;
}

header a.logo span {
    display: none;
}

header div.hero {
    width: 100%;
    top: 150px;
    display: flex;
}

/* Footer */

footer {
    display: flex;
    left: 0;
    bottom: 0;
    font-size: .8em;
    margin: 40px;
    color: #999;
    flex-wrap: wrap;
}

footer .content {
    display: inline;
}

footer a {
    margin-left: 30px;
    color: #777;
}

footer a:visited {
    color: #777;
}

footer a:hover {
    color: #000;
}

footer div.footercolumn {
    text-align: center;
    min-width: 200px;
    flex-basis: auto; /* default value */
    flex-grow: 1;
}

article {
    margin: 15px;
    padding: 15px;
    border: 3px solid #FFFFFF;
    border-radius: 5px;
    display: grid;
    color: #FFFFFF;
}

